// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DropdownButton> renders with label 1`] = `
<div
  style={
    Object {
      "width": "110px",
    }
  }
>
  <Dropdown__DropdownLabel
    gutter="3px"
  >
    <i />
    <Text__Text
      ellipsis={true}
    >
      Network
    </Text__Text>
  </Dropdown__DropdownLabel>
  <Dropdown__StyledDropdownButton>
    <FlexGrid>
      <FlexGrid.Item
        flex={1}
      >
        <Text__Text
          ellipsis={true}
        >
          Ad Mob
        </Text__Text>
      </FlexGrid.Item>
      <MdArrowDropDown
        size={13}
      />
    </FlexGrid>
  </Dropdown__StyledDropdownButton>
</div>
`;

exports[`<DropdownButton> renders without label 1`] = `
<div
  style={
    Object {
      "width": "110px",
    }
  }
>
  <Dropdown__StyledDropdownButton>
    <FlexGrid>
      <FlexGrid.Item
        flex={1}
      >
        <Text__Text
          ellipsis={true}
        >
          Country
        </Text__Text>
      </FlexGrid.Item>
      <MdArrowDropDown
        size={13}
      />
    </FlexGrid>
  </Dropdown__StyledDropdownButton>
</div>
`;
